--- a/scripts/jsdoc.config.json
+++ b/scripts/jsdoc.config.json
@@ -1,5 +1,5 @@
 {
-	"plugins": [],
+	"plugins": ["plugins/markdown", "plugins/summarize", "jsdoc-export-default-interop"],
 	"recurseDepth": 10,
 	"source": {
 		"include": ["src"],
@@ -12,14 +12,37 @@
 		"dictionaries": ["jsdoc", "closure"]
 	},
 	"templates": {
-		"referenceTitle": "My SDK Name",
+		"referenceTitle": "TextInputGuard",
 		"cleverLinks": false,
-		"monospaceLinks": false
+		"monospaceLinks": false,
+		"default": {
+			"includeDate": false
+		}
 	},
 	"opts": {
-		"template": "./node_modules/minami",
 		"destination": "./docs",
+		"template": "./node_modules/docdash",
 		"encoding": "utf8",
 		"recurse": true
+	},
+	"docdash": {
+		"menu": {
+			"Github repo": {
+				"href": "https://github.com/natade-jp/text-input-guard",
+				"class": "menu-item"
+			}
+		},
+		"static": false,
+		"sort": true,
+		"sectionOrder": ["Classes"],
+		"search": false,
+		"commonNav": true,
+		"collapse": true,
+		"wrap": false,
+		"typedefs": true,
+		"navLevel": 2,
+		"private": false,
+		"scripts": [],
+		"ShortenTypes": true
 	}
 }
