readmeの修正など

--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
 	"name": "text-input-guard",
-	"version": "0.0.1",
-	"description": "test",
-	"keywords": [],
+	"version": "0.1.0",
+	"description": "A JavaScript input guard library for Japanese web apps, handling full-width digits, numeric rules, digit limits, and formatted display.",
+	"keywords": ["input-validation",
+		"numeric-input",
+		"digit-limit",
+		"fullwidth",
+		"zenkaku",
+		"japanese"],
 	"author": "natade-jp <natade3@gmail.com> (https://github.com/natade-jp)",
 	"license": "MIT",
 	"type": "module",
